--- a/www/index.html
+++ b/www/index.html
@@ -105,7 +105,7 @@
               </div>
             </div>
             {{ heatmap_chart }}
-            {{ orders_location }}
+            <!-- {{ orders_location }} -->
             <!-- {{ orders_time }} -->
           </div>
         </section>
